Fix color picker layout on mobile

--- a/static/assets/picker.css
+++ b/static/assets/picker.css
@@ -8,6 +8,7 @@
 
 #theme-picker ul {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 1.5rem;
   padding-left: 0;
